# hpgem

./: .clang-format  .codecov.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPERS_GUIDE.md  LICENSE  MESHING.md  Makefile  README  README.md  TESTING_NOTES.md  compile.sh  developer-notes.txt  fileheader.txt  plotconvergence.py  quadCentaurMesh.txt  tecplot.phy
applications/: CMakeLists.txt
applications/AdvectionTest/: CMakeLists.txt  main.cpp
applications/DG-Max/: BaseExtended.cpp  BaseExtended.h  BaseExtended.hpp  BasisFunctionCollection_Curl.cpp  BasisFunctionCollection_Curl.h  BasisFunctionCollection_Curl.hpp  CMakeLists.txt  DG-Max.cpp  DGMaxDim.h  DGMaxLogger.cpp  DGMaxLogger.h  DGMaxProgramUtils.cpp  DGMaxProgramUtils.h  ElementInfos.cpp  ElementInfos.h  ElementInfos.hpp  Material.h  MaterialTensor.h  PMLElementInfos.h  fillMatrices.cpp  fillMatrices.h  fillMatrices.hpp  kspaceData.cpp  kspaceData.h  kspaceData.hpp  matrixAssembly.cpp  matrixAssembly.h  matrixAssembly.hpp  references.txt
applications/DG-Wave_linear/: CMakeLists.txt  main.cpp
applications/DG-Wave_nonlinear/: CMakeLists.txt  main.cpp
applications/Euler/: CMakeLists.txt  Euler.cpp  Euler.h  Euler_Impl.h  main.cpp
applications/ExampleMultipleVariableProblem/: AcousticWave.cpp  AcousticWave.h  AcousticWaveLinear.cpp  AcousticWaveLinear.h  AcousticWaveLinear_Impl.h  AcousticWave_Impl.h  CMakeLists.txt  main.cpp
applications/HamiltonianEuler/: CMakeLists.txt  ConfigurationData.h  HEuler.cpp  HEuler.h  HEuler.hpp  InitialConditions.cpp  InitialConditions.h  InitialConditions.hpp  TecplotOutput.cpp  TecplotOutput.h  TecplotOutput.hpp  bCoeff.txt  main.cpp
applications/Laplace/: .gitignore  CMakeLists.txt  main.cpp
applications/LinearAdvection/: CMakeLists.txt  main.cpp
applications/MeshMoverDemo/: CMakeLists.txt  MeshMover.h  MeshMover.hpp  MeshMoverDemo.cpp
applications/MeshQuality/: CMakeLists.txt  GlobalSolveQualityMetric.h  L2ProjectionErrorQualityMetric.h  QualityMetricComputation.h  SIPGErrorQualityMetric.h  main.cpp
applications/NavierStokes/: CMakeLists.txt  InviscidTerms.h  InviscidTerms_Impl.h  NavierStokesConstants.h  StateCoefficientsFunctions.h  StateCoefficientsStruct.h  UnsteadyNavierStokesAPI.h  UnsteadyNavierStokesAPI_Impl.h  ViscousTerms.h  ViscousTerms_Impl.h
applications/PoissionTest/: main.cpp
applications/PoissonTest/: CMakeLists.txt  main.cpp
applications/Preprocessor/: CMakeLists.txt  FortranUnformattedFile.cpp  FortranUnformattedFile.h  MeshSource.h  SparseUnionFind.cpp  SparseUnionFind.h  centaur.cpp  centaur.h  customIterator.h  customVector.h  elementShape.h  elementShape_impl.h  extractSurface.cpp  hpgem.cpp  hpgem.h  idtypes.h  main.cpp  mesh.h  meshData.h  mesh_impl.h  output.h  output_impl.h  unstructuredFile.h
applications/SavageHutter/: BidisperseRHS1D.cpp  BidisperseRHS1D.h  CMakeLists.txt  GlobalConstants.h  HeightLimiter.h  HelperFunctions.cpp  HelperFunctions.h  MeshMoverContraction.h  PositiveLayerLimiter.cpp  PositiveLayerLimiter.h  RightHandSideComputer.h  SavageHutter.cpp  SavageHutter.h  SavageHutter1DBase.cpp  SavageHutter1DBase.h  SavageHutter1DBasic.cpp  SavageHutter1DBasic.h  SavageHutter1DBidispersed.cpp  SavageHutter1DBidispersed.h  SavageHutter1DWidthAveraged.cpp  SavageHutter1DWidthAveraged.h  SavageHutter1DWidthHAndU.cpp  SavageHutter1DWidthHAndU.h  SavageHutter2DBase.cpp  SavageHutter2DBase.h  SavageHutter2DBasic.cpp  SavageHutter2DBasic.h  SavageHutter2DInteriorTest.cpp  SavageHutter2DInteriorTest.h  SavageHutterBase.cpp  SavageHutterBase.h  SavageHutterBase_Impl.h  SavageHutterRHS2D.cpp  SavageHutterRHS2D.h  SavageHutterRightHandSideComputer.cpp  SavageHutterRightHandSideComputer.h  SlopeLimiter.h  TvbLimiterWithDetector1D.cpp  TvbLimiterWithDetector1D.h  main.cpp
applications/SavageHutterNew/: CMakeLists.txt  HelperFunctions.cpp  SavageHutter1DBase.cpp  SavageHutter1DBase.h  SavageHutter1DBasic.cpp  SavageHutter1DBasic.h  SavageHutter1DBidispersed.cpp  SavageHutter1DBidispersed.h  SavageHutter1DWidthAveraged.cpp  SavageHutter1DWidthAveraged.h  SavageHutter2DBase.cpp  SavageHutter2DBase.h  SavageHutter2DBasic.cpp  SavageHutterBase.h  SavageHutterBase_Impl.h  main.cpp
applications/Temp/: CMakeLists.txt  temp.cpp
applications/TemplateBasicProblem/: CMakeLists.txt  main.cpp
applications/TutorialAdvection/: CMakeLists.txt  main.cpp
applications/TutorialLaplace/: CMakeLists.txt  main.cpp
applications/TutorialPoisson/: CMakeLists.txt  main.cpp
applications/UnstructuredMeshDemo/: CMakeLists.txt  app1.cpp
applications/app1/: CMakeLists.txt  app1.cpp
kernel/: AbstractDimensionlessBase.h  AnyOfDimension.h  CMakeDefinitions.h  CMakeLists.txt  Logger.cc  Logger.cpp  Logger.h  dummy.cpp  hpgem-cmake.cpp.in  hpgem-cmake.h
kernel/Base/: .gitignore  AssembleBasisFunctionSet.cpp  AssembleBasisFunctionSet.h  AssembleBasisFunctionSet.hpp  BaseBasisFunction.cpp  BaseBasisFunction.h  BaseBasisFunction.hpp  BasisFunctionSet.cpp  BasisFunctionSet.h  BasisFunctionSet.hpp  BasisFunctionsCollection_A.h  BasisFunctionsCollection_A.hpp  BasisFunctionsCollection_B.h  BasisFunctionsCollection_B.hpp  CMakeLists.txt  CTestTestfile.cmake  CommandLineHelpers.h  CommandLineOptions.cpp  CommandLineOptions.h  CommandLineOptions.hpp  ConfigurationData.h  ConfigurationData.hpp  ConstIterableWrapper.h  CoordinateTransformation.h  CoordinateTransformationData.h  DoNotScaleIntegrands.cpp  DoNotScaleIntegrands.h  Edge.cpp  Edge.h  Edge.hpp  Element.cpp  Element.h  Element.hpp  ElementBasisFunctions.cpp  ElementBasisFunctions.h  ElementCacheData.cpp  ElementCacheData.h  ElementCacheData.hpp  ElementCacheData_Impl.h  ElementData.cpp  (+156 more)
kernel/EigenSolvers/: CMakeLists.txt  DoehlerMaxwell.cpp  DoehlerMaxwell.h  JacobiDavidsonMaxwell.cpp  JacobiDavidsonMaxwell.h
kernel/FE/: BaseBasisFunction.cpp  BaseBasisFunction.h  BasisFunctionSet.cpp  BasisFunctionSet.h  BasisFunctions1DH1ConformingLine.cpp  BasisFunctions1DH1ConformingLine.h  BasisFunctions2DH1ConformingSquare.cpp  BasisFunctions2DH1ConformingSquare.h  BasisFunctions2DH1ConformingTriangle.cpp  (+23 more)
(+1484 files in other folders)
