##\TODO add automated detection of subdirectories

add_subdirectory(MeshMoverDemo)
add_subdirectory(app1)
add_subdirectory(Laplace)
#add_subdirectory(DG-Max)
#add_subdirectory(HamiltonianEuler)#To compile this application install PETSc 3.4.5; uncomment this line; and type make inside this directory in the build tree
add_subdirectory(DG-Wave_linear)
add_subdirectory(LinearAdvection)
